# mass_mailing_service_cw6

./: README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/templates/blog/: article_detail.html
config/: settings.py  urls.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/templates/contact/: contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: run_mailing.py
mailing/templates/mailing/: access_error.html  base.html  index.html  log_detail.html  log_list.html  mailing_detail.html  mailing_form.html  mailing_list.html
message/: admin.py  forms.py  models.py  urls.py  views.py
message/templates/message/: message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: ccmg.py  csu.py
users/templates/users/: email_registration_sent.html  email_verification_failed.html  email_verification_success.html  login.html  register.html  user_form.html  user_list.html
