[tool.poetry]
name = "mass-mailing-service-cw6"
version = "0.1.0"
description = ""
authors = ["pozdniakova olga <caramelca07@mail.ru>"]
readme = "README.md"
packages = [{include = "mass_mailing_service_cw6"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
django-crontab = "^0.7.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
